compiler/tests/should-fail/HostClash.via
/* NameClashError */

host alice : {A}
host alice : {A}

process main {
    val x: int = 0;
}
